--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "bootstrap": "^5.3.2",
     "sass": "^1.69.5",
     "vue": "^3.3.4",
-    "vue3-carousel": "^0.3.1"
+    "vue-router": "^4.2.5",
+    "vue3-carousel": "^0.3.1",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.2.3",
