--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
+    "axios": "^1.6.0",
     "bootstrap": "^5.3.2",
     "sass": "^1.69.5",
     "vue": "^3.3.4",
