--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,14 @@
     {
       "source": "/film/:id*",
       "destination": "/index.html"
+    },
+    {
+      "source": "/serial/:id*",
+      "destination": "/index.html"
+    },
+    {
+      "source": "/*",
+      "destination": "/index.html"
     }
   ]
 }
