--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,7 @@
       "destination": "/index.html"
     },
     {
-      "source": "/serial/:id*",
+      "source": "/series/:id*",
       "destination": "/index.html"
     },
     {
